[gd_scene load_steps=7 format=3 uid="uid://ca4j5hyn21ycr"]

[ext_resource type="Script" path="res://Scripts/UI/error_window.gd" id="1_eblr2"]
[ext_resource type="Texture2D" uid="uid://cwrerah6njgfo" path="res://Art/Generic_error_message.png" id="2_pl3ex"]
[ext_resource type="FontFile" uid="uid://bsgkydget2ok" path="res://SegoeUIVF.ttf" id="3_mqhv2"]
[ext_resource type="Texture2D" uid="uid://bkjnok5wkfdke" path="res://Art/Button.png" id="4_8lgjo"]
[ext_resource type="AudioStream" uid="uid://b0wbnca6dxp6y" path="res://Audio/SFX/Windows Critical Error Sounds.mp3" id="5_4pvxu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfkrl"]
texture = ExtResource("4_8lgjo")
texture_margin_left = 6.0
texture_margin_top = 2.0

[node name="Window" type="Window" groups=["Error_Window"]]
auto_translate_mode = 1
title = "C:\\002.exe"
position = Vector2i(787, 460)
size = Vector2i(345, 160)
always_on_top = true
script = ExtResource("1_eblr2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ErrorMessage" type="TextureRect" parent="Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -81.5
offset_right = 176.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_pl3ex")

[node name="ErrorButton" type="Button" parent="Camera2D/ErrorMessage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 109.0
offset_right = 352.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mqhv2")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_hfkrl")
theme_override_styles/hover = SubResource("StyleBoxTexture_hfkrl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hfkrl")
theme_override_styles/normal = SubResource("StyleBoxTexture_hfkrl")
text = "OK"

[node name="ErrorLabel" type="Label" parent="Camera2D/ErrorMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.75
offset_top = -16.085
offset_right = 163.25
offset_bottom = 71.915
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mqhv2")
theme_override_font_sizes/font_size = 14
text = "error"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4pvxu")
volume_db = 8.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Camera2D/ErrorMessage/ErrorButton" to="." method="_on_error_button_pressed"]
